# Kakeibo

./: .gitignore  CMakeLists.txt  README.md  test
include/core/: AppPaths.hpp  Backups.hpp  ConnectToCloud.hpp  DateRange.hpp  Envelope.hpp  EnvelopeManager.hpp  Enveloppe.hpp  EnveloppeManager.hpp  ExpenseStruct.hpp  Globals.hpp  Parser.hpp
include/ui/: Assets.hpp  Dispatch.hpp  EnvelopesTransfer.hpp  EnvelopesUi.hpp  EnveloppesTransfer.hpp  EnveloppesUi.hpp  History.hpp  ImportExpenses.hpp  MainView.hpp  MenuBar.hpp  MenuBarButton.hpp  Stats.hpp  Theme.hpp  assets.hpp
include/uiElements/: AutoRepeatButton.hpp  IconButton.hpp  KakeiboScrollArea.hpp  KakeiboTable.hpp
scripts/: .clang-format  bundle.sh  format.sh  removedebug.sh  run.sh
src/: main.cpp
src/core/: AppPaths.cpp  Backups.cpp  ConnectToCloud.cpp  DateRange.cpp  EnvelopeManager.cpp  EnveloppeManager.cpp  Parser.cpp
src/ui/: Dispatch.cpp  EnvelopesTransfer.cpp  EnvelopesUi.cpp  EnveloppesUi.cpp  History.cpp  ImportExpenses.cpp  MainView.cpp  MenuBar.cpp  MenuBarButton.cpp  Stats.cpp  enveloppesTransfer.cpp  stats.cpp
tests/: test_parser.cpp
